# BrillouinView

./: .gitignore  README.md  README_devlopment.md  pyproject.toml
BrillouinView/: BrillouinView.py
builder_dist/: build_dist.bat  build_dist.py  build_dist.sh
src/: brillouinview_main_window_ui.py  calibration_fit_window_ui.py  edit_calibration_settings_ui.py  main.py  main_old.py  setup_brillouin_machine_ui.py  setup_dac_window_ui.py  setup_experiment_window_ui.py  welcome_window_ui.py
src/brillouinview/: BrillouinViewSep6.py  calibration.py  fitting_algorithm.py  fitting_functions.py  helping_functions.py  io_fileparsing.py  plotting_modul.py  setup_classes.py  toml_io.py
src/brillouinview/gui/: app.py  calibration_tab.py  dac_experiment_setup.py  exp_set_window.py
src/brillouinview/gui/ui/: brillouinview_main_window.ui  calibration_fit_window.ui  edit_calibration_settings.ui  setup_brillouin_machine.ui  setup_dac_window.ui  setup_experiment_window.ui  welcome_window.ui
src/src/: BrillouinViewSep6.py  fitting_functions.py
src/ui/: brillouinview_main_window.ui
test/: test_brillouinview_pytest.py  test_gui.py  test_toml_io.py
test/files/: calibration_settings.yaml  calibration_settings_old.txt
