[project]
name = "brillouinview"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autograd>=1.8.0",
    "burnman==2.0.0",
    "ipython>=9.7.0",
    "matplotlib>=3.10.7",
    "numpy<2", # less 2 required by burnman 2.1.0
    "pandas>=2.3.3",
    "pybaselines>=1.2.1",
    "pyquaternion>=0.9.9",
    "scipy>=1.16.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]
