[project]
name = "brillouinview"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autograd>=1.8.0",
    # "burnman==2.0.0",
    "ipython>=9.7.0",
    "matplotlib>=3.10.7",
    "numpy<2", # less 2 required by burnman 2.1.0
    "pandas>=2.3.3",
    "pybaselines>=1.2.1",
    "pyqt5==5.15.11",
    "pyqt5-qt5==5.15.2",
    "pyqtgraph>=0.14.0",
    "pyquaternion>=0.9.9",
    "pyyaml>=6.0.3",
    "scipy>=1.16.3",
    "uncertainties>=3.2.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pyinstaller>=6.18.0",
]


[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

